# exercicios-grafos

./: README.md  pyproject.toml  trabalho1.ipynb  trabalho2.ipynb
graphs/: graph1.dot  graph2.dot  graph3.dot  graph4.dot
